--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,17 +10,29 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  dio: ^3.0.9
+  flutter_linkify: ^3.1.0
+  get: ^1.11.6
+  #http: ^0.12.0+4
+  package_info: ^0.4.0+16
+  provider: ^4.0.5
+  shared_preferences: ^0.5.6+3
+  timeago: ^2.0.26
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.4
 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+flutter_icons:
+  image_path_android: "assets/launcher/ic_launcher.png"
+  image_path_ios: "assets/launcher/ic_launcher.png"
+  android: true # can specify file name here e.g. "ic_launcher"
+  ios: true # can specify file name here e.g. "My-Launcher-Icon"
 
 # The following section is specific to Flutter.
 flutter:
@@ -31,9 +43,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+  - assets/images/
+  - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
