--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_linkify: ^3.1.0
   get: ^1.11.6
   #http: ^0.12.0+4
+  json_annotation: ^3.0.1
   package_info: ^0.4.0+16
   provider: ^4.0.5
   shared_preferences: ^0.5.6+3
@@ -23,7 +24,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.8.1
   flutter_launcher_icons: ^0.7.4
+  json_serializable: ^3.3.0
 
 
 # For information on the generic Dart part of this file, see the
