--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,11 @@ dependencies:
   cupertino_icons: ^0.1.2
   dio: ^3.0.9
   flutter_linkify: ^3.1.0
-  flutter_money_formatter: ^0.8.3
+#  flutter_money_formatter: ^0.8.3
   get: ^1.11.6
 #  http: ^0.12.0+4
-#  intl: ^0.16.1
-  intl: ^0.15.8
+  intl: ^0.16.1
+#  intl: ^0.15.8
   json_annotation: ^3.0.1
 #  modal_bottom_sheet: ^0.1.5
   package_info: ^0.4.0+16
