--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: New ForcaPoS
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -12,15 +12,21 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   dio: ^3.0.9
+  expandable: ^4.1.3
+  flutter_date_pickers: ^0.0.6
   flutter_linkify: ^3.1.0
+  flutter_localizations:
+    sdk: flutter
 #  flutter_money_formatter: ^0.8.3
   get: ^1.11.6
 #  http: ^0.12.0+4
-  intl: ^0.16.1
+  intl: ^0.16.0
 #  intl: ^0.15.8
   json_annotation: ^3.0.1
 #  modal_bottom_sheet: ^0.1.5
+#  multi_date_range_picker: ^0.0.4
   package_info: ^0.4.0+16
+  pie_chart: ^3.1.1
   provider: ^4.0.5
   shared_preferences: ^0.5.6+3
   timeago: ^2.0.26
