--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cached_network_image: ^2.2.0
   cupertino_icons: ^0.1.2
   dio: ^3.0.9
   expandable: ^4.1.3
