--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   provider: ^4.0.5
   shared_preferences: ^0.5.6+3
   timeago: ^2.0.26
+  url_launcher: ^5.4.5
 
 dev_dependencies:
   flutter_test:
