--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 #  flutter_money_formatter: ^0.8.3
+  flutter_rounded_date_picker: ^1.0.4
   get: ^1.11.6
 #  http: ^0.12.0+4
   intl: ^0.16.0
