--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cached_network_image: ^2.2.0
   cupertino_icons: ^0.1.2
   dio: ^3.0.9
+  dotted_border: ^1.0.5
   esys_flutter_share: ^1.0.2
   expandable: ^4.1.3
   flutter_cupertino_data_picker:
