--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
 #  intl: ^0.15.8
   json_annotation: ^3.0.1
 #  modal_bottom_sheet: ^0.1.5
+  month_picker_dialog: ^0.3.2
 #  multi_date_range_picker: ^0.0.4
   package_info: ^0.4.0+16
   pie_chart: ^3.1.1
