--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
     sdk: flutter
 #  flutter_money_formatter: ^0.8.3
   flutter_rounded_date_picker: ^1.0.4
+#  flutter_widgets: ^0.1.12
   get: ^2.6.3
 #  http: ^0.12.0+4
   intl: ^0.16.0
