POSMI-70 #time 1m fix bug 2.0.20200612+4 +apk versi ios, append suffix package name +add new token bmj +remove field id bk at edit customer +add offset size at option menu price group +renamed to: Forca PoS

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,6 +64,12 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+            applicationIdSuffix ".ios"
+            versionNameSuffix '_ios'
+        }
+        debug {
+            applicationIdSuffix ".ios"
+            versionNameSuffix '_ios'
         }
     }
 }
